layout/layout.css
html,
body {
    overflow-x: hidden;
    min-height: 100%;
    display: flex;
    flex-grow: 1;
    margin: 0;
    color: white;
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

x-grow,
[x-grow] {
    flex-grow: 1;
}

.center,
.x-view,
main {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    width: 100%;
    height: 100%;
}

.fit {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}




/*  Views Layout */

main {
    background: var(--primary-background);
    flex-grow: 1;
    position: relative;
}

main>* {
    position: absolute;
}

.x-view {
    padding: 24px 16px;
    /* Animations */
    opacity: 0;
    animation-fill-mode: both;
    animation-duration: 500ms;
    box-sizing: border-box;
}

.x-view.x-show {
    opacity: 1;
    z-index: 1;
}

.x-view.x-entry-animation {
    animation-name: from-right;
}

.x-view.x-exit-animation {
    animation-name: from-left;
    animation-direction: reverse;
}

x-header {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    display: flex;
    box-sizing: border-box;
    padding: 16px;
}

@media (min-width: 420px) {
    .x-view {
        padding: 32px 88px 48px;
        width: 100%;
        max-width: 800px;
        max-height: 672px;
    }

    .x-view x-header {
        padding: 8px 16px;
    }
}

@media (min-width: 1280px) and (min-height: 800px) {
    .x-view {
        width: 100%;
        max-width: 1028px;
        max-height: 672px;
    }
}

/* Lists */

ul{
    padding-left: 24px;
}

ul > li {
    padding-bottom: 8px;
}

